fixed background pulling in wrong color on first load on the search component and input recipe component

--- a/src/app/shared/components/search-dialog/search-dialog.component.scss
+++ b/src/app/shared/components/search-dialog/search-dialog.component.scss
@@ -38,7 +38,7 @@
 }
 
 ::ng-deep .mat-dialog-actions {
-  justify-content: flex-end;
+  justify-content: flex-end !important;
   margin: 5px;
 }
 
